--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <!-- Paste BOTH strings as required -->
     <string name="back4app_app_id">BrHwJkyQyRDdqqWE75lse3vMeOrwuZHHkzhfTqqr</string>
     <string name="back4app_client_key">ei7qiwp7FDZ6EtbJSvdSQlN9U70L5rcWCMO0PrWU</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
