--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,15 @@
     <!-- Paste BOTH strings as required -->
     <string name="back4app_app_id">BrHwJkyQyRDdqqWE75lse3vMeOrwuZHHkzhfTqqr</string>
     <string name="back4app_client_key">ei7qiwp7FDZ6EtbJSvdSQlN9U70L5rcWCMO0PrWU</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="chip_food_name">food name</string>
+    <string name="chip_food_group">food group</string>
+    <string name="chip_source_date">source date</string>
+    <string name="chip_expire_date">expire date</string>
+    <string name="chip_expire_before">expire before</string>
+    <string name="chip_expire_after">expire after</string>
+    <string name="chip_sourced_before">sourced before</string>
+    <string name="chip_sourced_after">sourced after</string>
 
 </resources>
