--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,18 @@
         <item>Bread</item>
     </string-array>
 
+    <string-array name="amountUnitStrings">
+        <item>tsp.</item>
+        <item>tbs.</item>
+        <item>oz.</item>
+        <item>cup</item>
+        <item>pt.</item>
+        <item>qt.</item>
+        <item>gal.</item>
+        <item>ml</item>
+        <item>L</item>
+        <item>g</item>
+        <item>kg</item>
+    </string-array>
+
 </resources>
